# llm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  llm.py  main.py  rag.py  reload_documents.py  slack_api.py
data/: sample.txt
