[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "langchain==1.2.13",
    "langchain-google-genai==4.2.1",
    "langchain-anthropic==1.4.0",
    "langchain-community==0.4.1",
    "chromadb==1.5.5",
    "python-dotenv==1.2.2",
    "sentence-transformers==5.3.0",
    "slack-bolt==1.27.0",
    "python-dotenv==1.2.2",
    "langchain-classic==1.0.3",
    "torch==2.2.2",
]
